fix: text and block align

--- a/src/style/components/_home.scss
+++ b/src/style/components/_home.scss
@@ -98,7 +98,6 @@
 
 .student__block{
 	display: flex;
-	justify-content: center;
 	align-items: center;
 	flex-direction: column;
 	width: 300px;
